--- a/index.css
+++ b/index.css
@@ -93,18 +93,57 @@ body {
     border-bottom: none;
 }
 
+.scoreboard {
+    background-color: #000505;
+    color: #fbfbff;
+}
+
+#scoreboard-title {
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    padding: 10px 0;
+    font-size: 2rem;
+    background-color: #3626a7;
+    margin-bottom: 0;
+    border-bottom: solid 1px #fbfbff;
+    letter-spacing: 4px;
+}
+
 .players-container {
-    padding: 0;
-    padding-top: 20px;
+    padding: 20px;
     display: flex;
     width: 100%;
     margin: 0 auto;
+    background-color: #657ed4;
 }
 
 .players {
-    margin: 0 auto;
+    margin: auto;
     list-style: none;
     font-family: 'Montserrat', sans-serif;
-    font-size: 2rem;
+    font-size: 1.4rem;
     display: inline-flex;
+    color: #3626a7;
+}
+
+.button-container {
+    background-color: #657ed4;
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
+.clear-board {
+    width: 280px;
+    height: 30px;
+    border-radius: 10px;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    font-size: 1rem;
+    margin: 0 auto;
+    display: block;
+    background-color: #3626a7;
+    color: #fbfbff;
+    word-spacing: 6px;
+    letter-spacing: 2px;
+    border-color: white;
 }
